# sara

sara_description/: CMakeLists.txt  package.xml
sara_description/launch/: rviz_jointstates.launch  rviz_standalone.launch
sara_description/meshes/base/: base.mtl
sara_description/meshes/link1/: link1.mtl
sara_description/meshes/link2/: link2.mtl
sara_description/meshes/link3/: link3.mtl
sara_description/meshes/link4/: link4.mtl  link4coll.stl
sara_description/meshes/link5/: link5big.mtl  link5collbig.stl  link5collsmall.stl  link5small.mtl
sara_description/meshes/link6/: link6.dae  link6.mtl  link6coll.stl  link6f.dae
sara_description/meshes/link7/: link7.dae  link7.mtl  link7coll.stl  link7f.dae
sara_description/urdf/: sara.gazebo  sara.xacro
sara_moveit/: .setup_assistant  package.xml
sara_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sara.srdf
sara_moveit/launch/: planning_context.launch
