<?xml version="1.0"?>
<package>
  <name>sara_description</name>
  <version>0.0.0</version>
  <description>The sara_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maxgraffenberger@hotmail.de">Maximilian Graffenberger</maintainer>

  <license>BSD</license>
  

  <author email="maxgraffenberger@hotmail.de">Maximilian Graffenberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>